2003-06-15  Ulrich Drepper  <drepper@redhat.com>

	* pthreadP.h (LIBC_CANCEL_ASYNC): Also define for librt.
	(LIBC_CANCEL_RESET): Likewise.
	Declare __librt_enable_asynccancel and __librt_disable_asynccancel.
	* sysdeps/pthread/Makefile (librt-sysdep_routines): Add
	librt-cancellation.
	(CFLAGS-libcrt-cancellation.c): Define.
	* sysdeps/pthread/librt-cancellation.c: New file.
	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h: Define all the nice
	macros also when compiling librt.
	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h: Likewise.

	* sysdeps/unix/sysv/linux/timer_create.c: Add prototype for
	compat_timer_create.

2003-06-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/posix-timer.h (timespec_compare): Always inline.

	* sysdeps/unix/sysv/linux/fork.h: Add libc_hidden_proto for
	__register_atfork.
	* sysdeps/unix/sysv/linux/register-atfork.c (__register_atfork):
	Add libc_hidden_def.

2003-06-13  Roland McGrath  <roland@redhat.com>

	* sysdeps/x86_64/td_ta_map_lwp2thr.c (td_ta_map_lwp2thr): Pass FS
	constant from <sys/reg.h> to ps_get_thread_area, not register contents.

2003-06-11  Ulrich Drepper  <drepper@redhat.com>

	* allocatestack.c (queue_stack): Always inline.
	* ptreadhP.h (__do_cancel): Likewise.

2003-06-10  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/s390/sem_timedwait.c (sem_timedwait): Fix
	a typo.

2003-06-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_signal.S
	(__pthread_cond_signal): Remove incorrect second addition for
	cond_lock!=0.
